Tweak - Fix gallery and social links alignment CSS

--- a/SCSS/theme/_theme-style.scss
+++ b/SCSS/theme/_theme-style.scss
@@ -3153,6 +3153,19 @@ ul.wp-block-gallery {
 }
 
 /*--------------------------------------------------------------
+Gutenberg Blocks Layout.
+--------------------------------------------------------------*/
+.wp-block-gallery,
+.wp-block-social-links {
+
+	&.alignleft,
+	&.alignright,
+	&.aligncenter {
+		display: flex;
+	}
+}
+
+/*--------------------------------------------------------------
 Responsive Structure
 --------------------------------------------------------------*/
 @media screen and (max-width: 1200px) {
